finish basic CRUD operations
