# src/api/disease-monitor/apis/DiseaseTypesApi.ts
@@ -1,0 +1,91 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Disease Monitor Api
+ * Disease Monitor management for Web-In-Cloud system
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * Contact: xsmoleniak@stuba.sk
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+import * as runtime from '../runtime';
+import type {
+  Disease,
+} from '../models';
+import {
+    DiseaseFromJSON,
+    DiseaseToJSON,
+} from '../models';
+
+export interface GetDiseasesRequest {
+    regionId: string;
+}
+
+/**
+ * DiseaseTypesApi - interface
+ * 
+ * @export
+ * @interface DiseaseTypesApiInterface
+ */
+export interface DiseaseTypesApiInterface {
+    /**
+     * By using regionId you get list of predefined diseases
+     * @summary Provides the list of diseases associated with region
+     * @param {string} regionId pass the id of the particular geographic region
+     * @param {*} [options] Override http request option.
+     * @throws {RequiredError}
+     * @memberof DiseaseTypesApiInterface
+     */
+    getDiseasesRaw(requestParameters: GetDiseasesRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<Array<Disease>>>;
+
+    /**
+     * By using regionId you get list of predefined diseases
+     * Provides the list of diseases associated with region
+     */
+    getDiseases(requestParameters: GetDiseasesRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<Array<Disease>>;
+
+}
+
+/**
+ * 
+ */
+export class DiseaseTypesApi extends runtime.BaseAPI implements DiseaseTypesApiInterface {
+
+    /**
+     * By using regionId you get list of predefined diseases
+     * Provides the list of diseases associated with region
+     */
+    async getDiseasesRaw(requestParameters: GetDiseasesRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<Array<Disease>>> {
+        if (requestParameters.regionId === null || requestParameters.regionId === undefined) {
+            throw new runtime.RequiredError('regionId','Required parameter requestParameters.regionId was null or undefined when calling getDiseases.');
+        }
+
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        const response = await this.request({
+            path: `/disease-monitor/{regionId}/disease`.replace(`{${"regionId"}}`, encodeURIComponent(String(requestParameters.regionId))),
+            method: 'GET',
+            headers: headerParameters,
+            query: queryParameters,
+        }, initOverrides);
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => jsonValue.map(DiseaseFromJSON));
+    }
+
+    /**
+     * By using regionId you get list of predefined diseases
+     * Provides the list of diseases associated with region
+     */
+    async getDiseases(requestParameters: GetDiseasesRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<Array<Disease>> {
+        const response = await this.getDiseasesRaw(requestParameters, initOverrides);
+        return await response.value();
+    }
+
+}
